--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link href="/node_modules/cropperjs/dist/cropper.min.css" rel="stylesheet" />
 
-      <title>Vite App</title>
+      <title>GetiCard</title>
   </head>
   <body>
     <div id="app"></div>
